<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="facebook_app_id">485982741612004</string>

    <string name="app_name">AusoShare</string>
    <string name="app_version">2.0.0</string>
    <string name="search_title">Input keyword</string>
    <string name="hello_world">Hello world!</string>
    <string name="is_timeline">Do you want to share</string>
    <string name="errcode_success">successful</string>
	<string name="errcode_cancel">Cancal</string>
	<string name="errcode_deny">Refused</string>
	<string name="errcode_unknown">Unknown error: %1$d</string>
	<string name="double_click_exit_text">click one more time to quit</string>

    <!-- button bar-->
    <string name="btn_share">share</string>
    <string name="btn_entertaiment">entertaiment</string>
    <string name="btn_contact">contact</string>
    <string name="btn_me">me</string>

    <!-- tab titles -->
	<string name="tab_title_home">Home</string>
	<string name="tab_title_yellowpage">YellowPage</string>
	<string name="tab_title_contact">Contact</string>
	<string name="tab_title_profile">Profile</string>
	<string name="tab_title_entertainment">Entertainment</string>
	<string name="tab_title_promotion">Promotion</string>
	
    <string name="action_settings">Settings</string>

    <string name="button_back">back</string>

    <string name="forward_guide_text">转发步骤：\n1.点击打开广告；\n2.在打开的广告页，点击分享到微信;\n3.到微信朋友圈查看。</string>
    <string name="ad_simple_desc_text">Tridel年度盛宴--2015楼盘销售展会全新SCALA CONDO VVIP发布,就在Oct.31，机不可失！</string>

    <string name="title_infinity_cellphone">，You got $</string>
    <string name="title_ausomedia_yellow_page_text">yellow page</string>
    <string name="title_infinity_cellphone3">contact us</string>
    <string name="title_infinity_cellphone4">me</string>
    <string name="empty"/>
    <string name="button_ok">OK</string>
    <string name="button_cancel">CANCEL</string>

    <string name="title_validation_failed">validation failed</string>
    <string name="title_update_profile">update profile</string>

    <string name="error_title">ERROR</string>

    <string name="empty_list_ad">no data, try later</string>
    <string name="empty_list_entertainment">Downloading or no data</string>
    <string name="empty_list_no_info">no data, try later</string>
    <string name="empty_forwarded_ad">no shared record</string>
    <string name="register_email_prompt">register with your email！</string>
    <string name="alert_share_ad_login_prompt_text">register/login with your email</string>  
    <string name="alert_mine_login_prompt_text">you have to sign in</string>

    <string name="ongoing_total_ad_funds">Bonus: </string>
    <string name="ongoing_ad_completed_percentage">assigned: </string>
    <string name="ongoing_ad_completed_percentage_suffix">%</string>
    <string name="ongoing_ad_completed_shared_suffix"> people shared</string>

    <string name="profile_current_income_text">available amount: CAD </string>
    <string name="profile_top10_info_text">TOP 10</string>
    <string name="profile_reading_times">read：</string>
    <string name="profile_earned_funds">earned：</string>
    <string name="profile_empty_ad_text">No record</string>
    
    <!-- my profile -->
    <string name="my_log_in">login</string>
    <string name="my_log_out">logout</string>
    <string name="my_update_profile">update profile</string>
    <string name="my_update_password">update password</string>
    <string name="my_forwarded_ad">forwarded record</string>
    <string name="my_current_income">current income</string>
    <string name="my_incoming_record">incoming record</string>
    <string name="my_withdraw_record">withdraw record</string>
    <string name="my_withdraw_request">withdraw request</string>
    <string name="my_update_profile_success">profile updated successful!</string>
    <string name="my_update_password_success">password updated successful!</string>
    <string name="my_logout_info_title">Logout</string>
    <string name="my_logout_info_content">Do you want to quit?</string>
    
    
    <!-- 登录提示 -->
    <string name="login_prompt_text">login prompt</string>

    <!-- contact -->
    <string name="contact_t_c_text">Announcement</string>
    <string name="contact_incoming_rule_text">Incoming rule</string>
    <string name="contact_withdraw_rule_text">Withdraw rule</string>
    <string name="contact_company_introduction_text">Introduction</string>
    <string name="contact_questions_answers_text">FAQ</string>
    <string name="contact_customer_text">Contact us</string>

    <!-- yellow page -->
    <string name="yp_first_life_text">生活服务</string>
    <string name="yp_first_education_text">教育培训</string>
    <string name="yp_first_real_estate_text">房屋服务</string>
    <string name="yp_first_vehicle_text">汽车服务</string>
    
    <!-- entertainment -->
	<string name="entertainment_title_text">entertainment</string>

    <!-- network -->
    <string name="network_unavailable_info">network unavailable, try later!</string>


    <string name="ws_error_no_connection">no connection.\ncheck WIFI setting, try later!</string>
    <string name="ws_error_timeout">connecting timeout</string>
    <string name="ws_error_response_invalid">response invalid</string>
    <string name="ws_error_connection_error">connection error</string>
    <string name="ws_error_server_response_error">response error</string>
    <string name="ws_error_response_unknown">response unknown</string>
    <string name="ws_error_client_not_authorized">client not authorized</string>
    
    <string name="ws_error_unknown_request">unknown request</string>
    <string name="ws_error_unknown_parameter">unknown parameter</string>
    <string name="ws_error_unauthorized_user">unauthorized user</string>
    <string name="ws_error_nickname">nickname error</string>
    <string name="ws_error_email">email error</string>
    <string name="ws_error_password">password error</string>
    <string name="ws_error_username">username error</string>
    <string name="ws_error_capcha">capcha error</string>
    <string name="ws_error_send_email">send email error</string>
    <string name="ws_error_exist_email">email was registered</string>

    <!-- register -->
    <string name="old_password">password</string>
    <string name="new_password">new password(6-16 chars)</string>
    <string name="nick_name_text">nickname</string>
    <string name="email_tv">Email</string>
    <string name="paypal_tv">Paypal Email</string>
    <string name="register_email_tv">Email</string>
    <string name="password_text">password</string>
    <string name="password_login_text">password</string>
    <string name="confirm_password_text">confirm password</string>
    <string name="confirm_button_text">confirm</string>
    <string name="forgot_password_text">forgot password?</string>
    <string name="register_new_user_text">register</string>
    <string name="label_remember_me">remember me</string>
    <string name="gender_text">Gender</string>
    <string name="birthday_text">Birthday</string>
    <string name="promotion_code">promotion code</string>
    <string name="male_text">male</string>
    <string name="female_text">female</string>
    <string name="share_button_text">share to wechat moments</string>
    <string name="share_to_friend_button_text">share to wechat friend</string>

    <!-- -->
    <string name="update_btn">update</string>
    <string name="update_pwd_btn">update password</string>

    <string name="validate_empty_password">empty password</string>
    <string name="validate_outofrange">%1$d - %2$d characters</string>
    <string name="validate_password_nomatch">password isn\'t match</string>
    <string name="validate_empty_email">empty Email</string>
    <string name="validate_email_failure">invalidate Email.</string>
    <string name="validate_email_nomatch">Email isn\'t match.</string>

    <string name="validate_empty_username">empty username</string>
    <string name="validate_username_failure">username error</string>
    <string name="validate_outofrange_username">username:%1$d - %2$d characters</string>
    <string name="forgot_password_title">forgot password</string>
    <string name="forgot_password_message">temporary password has been sent.</string>

    <!-- customer support -->
    <string name="customer_support_email">mailto:cs@ausoshare.com</string>
    <string name="email_title">email title</string>
    <string name="email_content">content...</string>
    
    <!-- splash page -->
    <string name="splash_name_text">Ausomedia</string>
    <string name="skip">skip</string>
    <string name="start">start</string>
    <string name="splash_copyright">&#169;2015-2016 Ausomedia.com All rights reserved.</string>

    <!-- login -->
    <string name="login_test_email">cs@ausoshare.com</string>
    <string name="login_test_password">1234</string>
    
     <!-- ad list -->
     <string name="ui_click">click to open</string>
     <string name="ui_share">click to share</string>
     <string name="ui_view">income</string>
    <string name="ui_bonus">bonus: $</string>
    <string name="ui_income">Per click: $</string>
    <string name="ui_location">location: </string>
    <string name="ui_shared">people shared</string>
    <string name="ui_progress">progress: 50%</string>
    
    <!-- entertainment -->
    <string name="page_fun">Fun</string>
    <string name="page_news">News  </string>
    <string name="page_tips">Tips </string>
    <string name="page_video">Video </string>
    
     <!-- profile -->
     <string name="ui_logout">[QUIT]</string>
     <string name="ui_leaderboard">[TOP10]</string>
     <string name="ui_detail">Detail</string>
     <string name="ui_username">Username</string>
     <string name="ui_avatar">[Avatar]</string>
     <string name="ui_current_income">current income: $</string>
     <string name="ui_share_record">forwarding record</string>  
     <string name="ui_withdraw_record">withdraw record</string>
     <string name="ui_withdraw_request">withdraw request</string>
     <string name="ui_push_notification">push notification</string>
    <string name="ui_check_update">check new version</string>
     <string name="ui_lang_setting">Language</string>
     <string name="ui_lang_en">English</string>
     <string name="ui_lang_zh">中文</string>
     <string name="ui_take_picture">take picture</string>
     <string name="ui_album">pick from album</string>
     
     <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    
    <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string> 
    <string name="camera_cancel">cancel</string>
    <string name="no_photo">相册没有图片</string>
    
    <string name="no_data">no data,click to refresh</string>

    <string name="confirm_prompt_text">Confirmation</string>
    <string name="alert_withdraw_prompt_text">Do you want to withdraw right now?</string>
    <string name="lang_title_en">You selected English</string>
    <string name="lang_set_en">You must restart to apply this change</string>
    <string name="lang_change_en">English will be applied</string>
    <string name="lang_title_zh">系统语言为中文</string>
    <string name="lang_set_zh">如需语言变更生效请退出应用并重启</string>
    <string name="lang_change_zh">系统语言设置为中文</string>
    <string name="update_title">It is not newest version</string>
    <string name="update_require">Would you like to update?</string>

    
</resources>
