<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="0dp" >
    
    <ImageView
        android:id="@+id/img_bk"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:scaleType="center"
        android:src="@drawable/background" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:paddingBottom="20dp"
        android:paddingLeft="60dp"
        android:paddingTop="20dp"
        android:src="@drawable/zi" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/img_bk"
        android:layout_marginBottom="5dp" >
        
        <LinearLayout
            android:id="@+id/menu_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line"
            android:orientation="vertical" >

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="160dp" >

             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="5dp"
                 android:layout_weight="11"
                 android:orientation="vertical" >

                 <ImageButton
                     android:id="@+id/contact_t_c_image"
                     android:layout_width="96dp"
                     android:layout_height="96dp"
                     android:layout_gravity="center_horizontal"
                     android:focusable="true" 
                     
                     android:background="@drawable/btn_declare_bg" />

                 <TextView
                     android:id="@+id/contact_t_c_tv"
                     style="@style/myProfile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="0dp"
                     android:text="@string/contact_t_c_text" />

             </LinearLayout>

             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="5dp"
                 android:layout_weight="10"
                 android:orientation="vertical" >

                 <ImageButton
                     android:id="@+id/contact_withdraw_rule_image"
                     android:layout_width="96dp"
                     android:layout_height="96dp"
                     android:layout_gravity="center_horizontal"
                     android:background="@drawable/btn_withdraw_bg" />

                 <TextView
                     android:id="@+id/contact_withdraw_rule_tv"
                     style="@style/myProfile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="0dp"
                     android:text="@string/contact_withdraw_rule_text" />

             </LinearLayout>

             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="5dp"
                 android:layout_weight="10"
                 android:orientation="vertical" >

                 <ImageButton
                     android:id="@+id/contact_income_rule_image"
                     android:layout_width="96dp"
                     android:layout_height="96dp"
                     android:layout_gravity="center_horizontal"
                     android:background="@drawable/btn_income_bg" />

                 <TextView
                     android:id="@+id/contact_income_rule_tv"
                     style="@style/myProfile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="0dp"
                     android:text="@string/contact_incoming_rule_text" />

             </LinearLayout>

         </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="160dp"
             android:orientation="horizontal" >

             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="25dp"
                 android:layout_weight="11"
                 android:orientation="vertical" >

                 <ImageButton
                     android:id="@+id/contact_company_introduction_image"
                     android:layout_width="96dp"
                     android:layout_height="96dp"
                     android:layout_gravity="center_horizontal"
                     android:background="@drawable/btn_bulb_bg" />

                 <TextView
                     android:id="@+id/contact_company_introduction_tv"
                     style="@style/myProfile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="0dp"
                     android:text="@string/contact_company_introduction_text" />

             </LinearLayout>

             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="25dp"
                 android:layout_weight="10"
                 android:orientation="vertical" >

                 <ImageButton
                     android:id="@+id/contact_questions_answers_image"
                     android:layout_width="96dp"
                     android:layout_height="96dp"
                     android:layout_gravity="center_horizontal"
                     android:background="@drawable/btn_message_bg" />

                 <TextView
                     android:id="@+id/contact_questions_answers_tv"
                     style="@style/myProfile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="0dp"
                     android:text="@string/contact_questions_answers_text" />

             </LinearLayout>

             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="25dp"
                 android:layout_weight="10"
                 android:orientation="vertical" >

                 <ImageButton
                     android:id="@+id/contact_customer_image"
                     android:layout_width="96dp"
                     android:layout_height="96dp"
                     android:layout_gravity="center_horizontal"
                     android:background="@drawable/btn_phone_bg" />

                 <TextView
                     android:id="@+id/contact_customer_tv"
                     style="@style/myProfile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="0dp"
                     android:text="@string/contact_customer_text" />

             </LinearLayout>

         </LinearLayout>

    </LinearLayout>
        

        
    </ScrollView>
    
     
   

</RelativeLayout>
